Fixed issue with game's title being off-center It just bothered me lol

--- a/css/main.css
+++ b/css/main.css
@@ -162,14 +162,13 @@ bottom: 0;
 background: rgb(0, 0, 0);
 background: rgba(0, 0, 0, 0.5); /* Black see-through */
 color: #f1f1f1;
-width: 100%;
 transition: .3s ease;
 opacity:0;
 color: white;
 font-size: 20px;
 padding: 20px;
 text-align: center;
-width: 265px;
+width: 225px;
 }
 .box:hover .overlay {
 opacity: 1;
